# rawraw

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: rust.yml  wasm-build.yml
codecs/proto/src/: encoder.rs  lib.rs  wire.rs
core/: README.md
core/src/: context.rs  error.rs  events.rs  handler.rs  low_level.rs  message.rs  resource.rs  result.rs  routing.rs
core_macros/src/: lib.rs
crates/dsl/dsl/: Cargo.toml  build.rs
crates/dsl/dsl/examples/: ex1.ixc  ex1.txt
crates/dsl/dsl/src/: ast.rs  db.rs  diagnostic.rs  grammar.lalrpop  grammar.pest  ixc.ungram  lex.rs  lexer.rs  lsp.rs  main.rs  parser.rs  syntax.rs
crates/dsl/dsl/src/ast/: nodes.rs
crates/dsl/dsl/src/lexer/: lex_tokens.rs  mod.rs
crates/dsl/dsl/src/lsp/: diagnostic.rs  did_change.rs  did_open.rs  document_symbol.rs  line_col.rs  server.rs
crates/dsl/dsl/src/parser/: file.rs  map.rs  mod.rs  parse.rs  state.rs  typ.rs
crates/dsl/dsl/src/parser2/: mod.rs  state.rs
crates/dsl/dsl/src/syntax/: mod.rs  syntax_kind.rs
crates/dsl/ixc-lang/: README.md  package.json  pnpm-lock.yaml
crates/dsl/lang/: ARCHITECTURE.md  Cargo.toml  build.rs
crates/dsl/lang/examples/: bank.ixc  ex1.ixc  ixc20.ixc  owned.ixc
crates/dsl/lang/src/: db.rs  files.rs  frontend.rs  ixc.ungram  lib.rs  lsp_server.rs  main.rs
crates/dsl/lang/src/backend/: mod.rs
crates/dsl/lang/src/frontend/: ast.rs  checker.rs  diagnostic.rs  parser.rs  resolve.rs  resolver.rs  syntax.rs  type_checker.rs
crates/dsl/lang/src/frontend/ast/: nodes.rs
crates/dsl/lang/src/frontend/checker/: ids.rs  item.rs  resolver.rs  scope.rs
crates/dsl/lang/src/frontend/lexer/: lex_tokens.rs
crates/dsl/lang/src/frontend/parser/: block.rs  collections.rs  expr.rs  file.rs  fn_.rs  handler.rs  impl_.rs  interface.rs  map.rs  name.rs  object.rs  parser.rs  state.rs  struct_.rs  test.rs  typ.rs  type_.rs
crates/dsl/lang/src/frontend/resolve/: definer.rs  ids.rs  item_ref.rs  scope.rs
crates/dsl/lang/src/frontend/resolver/: definer.rs  file.rs  ids.rs  impl_.rs  interface.rs  item_ref.rs  members.rs  node_id.rs  resolve.rs  scope.rs  struct_.rs  symbol.rs
crates/dsl/lang/src/frontend/syntax/: syntax_kind.rs
crates/dsl/lang/src/frontend/type_checker/: bind.rs  ids.rs  item.rs  resolve.rs  scope.rs  type_.rs
crates/dsl/lang/src/lsp_server/: diagnostic.rs  did_change.rs  did_open.rs  did_update.rs  document_symbol.rs  goto_definition.rs  hover.rs  line_col.rs  semantic_tokens.rs  server.rs
crates/dsl/vscode-ext/: CHANGELOG.md  ixc.tmGrammar.json  pnpm-lock.yaml
crates/examples/: modules.rs
crates/executor/: README.md
crates/executor/state_handler/: Cargo.toml  README.md
crates/executor/state_handler/src/: event.rs  lib.rs  snapshot_state.rs
crates/executor/stf/: Cargo.toml  README.md
crates/executor/stf/src/: block_info.rs  example_app.rs  examples.rs  info.rs  lib.rs
crates/module_system/collections/: Cargo.toml
crates/module_system/collections/src/: accumulator.rs  item.rs  lib.rs  map.rs  prefix.rs  set.rs  store_client.rs  unique.rs
crates/module_system/core/: Cargo.toml  README.md  build.rs
crates/module_system/core/src/: account_api.rs  context.rs  error.rs  events.rs  handler.rs  known_accounts.rs  lib.rs  low_level.rs  message.rs  resource.rs  result.rs  routing.rs  schema.rs  store.rs  unique_id.rs
crates/module_system/ixc/: Cargo.toml  README.md  test_client_binding.sh
crates/module_system/ixc/examples/: authz.rs  bank.rs  client_binding.rs  client_binding.toml  counter.rs  gas.rs  migrations.rs  modules.rs  simple_asset.rs  vesting.rs
crates/module_system/ixc/src/: lib.rs
crates/module_system/message_api/: Cargo.toml
crates/module_system/schema/: Cargo.toml  README.md  why.md
crates/module_system/schema/benches/: basic.rs
crates/module_system/schema/proptest-regressions/binary/: mod.txt
crates/module_system/schema/src/: any.rs  buffer.rs  bump.rs  client.rs  codec.rs  decoder.rs  dynamic.rs  encoder.rs  encoding.rs  enums.rs  field.rs  fields.rs  handler.rs  kind.rs  lib.rs  list.rs  mem.rs  message.rs  oneof.rs  schema.rs  structs.rs  testdata.rs  types.rs  value.rs
crates/module_system/schema/src/binary/: decoder.rs  encoder.rs  mod.rs
crates/module_system/schema/src/json/: account_id.rs  decoder.rs  encoder.rs  escape.rs  mod.rs  tokenizer.rs  unescape.rs
crates/module_system/schema/src/state_object/: key.rs  key_field.rs  mod.rs  value.rs  value_field.rs
crates/module_system/schema_macros/: Cargo.toml
crates/modules/bank/: Cargo.toml  README.md
crates/modules/bank/src/: lib.rs
crates/modules/community_pool/: Cargo.toml  README.md
crates/modules/community_pool/src/: lib.rs
crates/modules/scheduler/: Cargo.toml
crates/modules/scheduler/src/: lib.rs
crates/server/db/: Cargo.toml
crates/server/db/src/: jmt.rs  lib.rs  sled.rs  tracer.rs
crates/src/: lib.rs
crates/storage/: Cargo.toml  README.md
crates/vm/account_manager/: Cargo.toml  README.md
crates/vm/account_manager/src/: authz.rs  call_stack.rs  code_manager.rs  exec_ctx.rs  gas.rs  gas_stack.rs  id_generator.rs  lib.rs  native_vm.rs  observer.rs  query_ctx.rs  scope_guard.rs  state_handler.rs  store.rs  vm_manager.rs  wrapper.rs
crates/vm/account_manager/src/state/: mod.rs
crates/vm/account_manager/src/state_handler/: gas.rs  mod.rs
crates/vm/account_manager/src/state_handler/std/: handler.rs  manager.rs  mod.rs
crates/vm/stf/: Cargo.toml
crates/vm/stf/src/: lib.rs  stf.rs  vm_manager.rs
crates/vm/stf/src/mocks/: mod.rs
crates/vm/stf/src/state/: mod.rs
example/: Cargo.toml
example/src/: lib.rs
examples/: bank.rs  counter.rs  simple_asset.rs
m/poa/: cargo.toml
message_api/src/: account_id.rs  code.rs  data_pointer.rs  handler.rs  header.rs  lib.rs
schema/: README.md
schema/src/: buffer.rs  bump.rs  codec.rs  decoder.rs  encoder.rs  enums.rs  mem.rs  schema.rs  structs.rs  value.rs
state_objects/src/: accumulator.rs  errors.rs  index.rs  item.rs  lib.rs  map.rs  ordered_set.rs  set.rs  table.rs
testing/src/: disk_store.rs  lib.rs  store.rs  vm.rs
(+53 files in other folders)
