[workspace]
members = [
    "crates/module_system/core",
    "crates/module_system/ixc",
    "crates/module_system/core_macros",
    "crates/module_system/collections",
    "crates/module_system/schema",
    "crates/module_system/schema_macros",
    "crates/module_system/message_api",
    "crates/module_system/testing",
    "crates/module_system/util/simple_time",
    "crates/storage",
#    "codecs/proto",
#    "codecs/evm",
#    "vm/wasmtime",
    "crates/vm/api",
    "crates/vm/stf",
    "example", 
]

[workspace.package]
repository = "https://github.com/cosmos/cosmos-sdk"
license = "Apache-2.0"
rust-version = "1.81.0"

[workspace.lints]

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
