[workspace]
resolver = "2"
members = [
    "crates/module_system/core",
    "crates/module_system/ixc",
    "crates/module_system/core_macros",
    "crates/module_system/collections",
    "crates/module_system/schema",
    "crates/module_system/schema_macros",
    "crates/module_system/message_api",
    "crates/module_system/testing",
    "crates/module_system/util/simple_time",
    "crates/vm/api",
    "crates/vm/account_manager",
    "example",
    "crates/executor/state_handler",
    "crates/modules/*",
]

[workspace.package]
repository = "https://github.com/cosmos/cosmos-sdk"
license = "Apache-2.0"
rust-version = "1.81.0"

[workspace.dependencies]
allocator-api2 = "0.2.18"
ixc = { path = "./crates/module_system/ixc" }
ixc_core = { path = "./crates/module_system/core" }
ixc_schema = { path = "./crates/module_system/schema", version = "0.0.4", features = [
    "use_ixc_macro_path",
] }
ixc_message_api = { path = "./crates/module_system/message_api", version = "0.0.4" }
ixc_collections = { path = "./crates/module_system/collections", version = "0.0.4" }
ixc_core_macros = { path = "./crates/module_system/core_macros", version = "0.0.4" }
ixc_schema_macros = { path = "./crates/module_system/schema_macros", version = "0.0.3", features = [
    "use_ixc_macro_path",
] }

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
