[package]
name = "ixc_lang"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.93"
logos = "0.14.2"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }
ariadne = "0.5.0"
syn = "2.0.89"
quote = "1.0.37"
prettyplease = "0.2.25"

[lints]
workspace = true
