[package]
name = "ixc_lang"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.93"
logos = "0.14.2"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }
ariadne = "0.5.0"
rowan = "0.16.1"
syn = "2.0.90"
quote = "1.0.37"
prettyplease = "0.2.25"
num_enum = "0.7.3"
itertools = "0.13.0"
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "0ac5c1c9843718136c76ac600f13781200adc718" }
line-index = "0.1.2"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
dashmap = "6.1.0"

[build-dependencies]
ungrammar = "1.16.1"
quote = "1.0.37"
syn = "2.0.90"
prettyplease = "0.2.25"
heck = "0.5.0"
anyhow = "1.0.94"
proc-macro2 = "1.0.92"


[lints]
#workspace = true
