[package]
name = "ixc_lang"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.93"
logos = "0.15.0"
ariadne = "0.5.0"
rowan = "0.16.1"
syn = "2.0.90"
quote = "1.0.37"
prettyplease = "0.2.25"
num_enum = "0.7.3"
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "88a1d7774d78f048fbd77d40abca9ebd729fd1f0" }
line-index = "0.1.2"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20.0"
dashmap = "6.1.0"
clap = { version = "4.5.23", features = ["derive"] }

[build-dependencies]
ungrammar = "1.16.1"
quote = "1.0.37"
syn = "2.0.90"
prettyplease = "0.2.25"
heck = "0.5.0"
anyhow = "1.0.94"
proc-macro2 = "1.0.92"

[lib]
name = "ixc_lang"
path = "src/lib.rs"

[[bin]]
name = "ixc_lang"
path = "src/main.rs"


[lints]
#workspace = true
