[package]
name = "ixc_state_handler"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
quick_cache = "0.6.9"
ixc_message_api = { path = "../../module_system/message_api" }
allocator-api2 = "0.2.18"

[lints]
workspace = true
