[package]
name = "ixc_state_handler"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ixc_message_api = { path = "../../module_system/message_api" }
allocator-api2 = { workspace = true }
ixc_account_manager = { path = "../../vm/account_manager" }

[lints]
workspace = true
