[package]
name = "stf"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
allocator-api2 = "0.2.18"
ixc_message_api = { path = "../../module_system/message_api" }
ixc_state_handler = { path = "../state_handler" }

[lints]
workspace = true
