[package]	
name = "ixc"	
edition = "2021"	
description = "Interchain SDK"	
readme = "README.md"	
version = "0.0.5"	
repository.workspace = true	
license.workspace = true	

[dependencies]	
ixc_core = { path = "../core", version = "0.0.4" }	
ixc_schema = { path = "../schema", version = "0.0.4", features = ["use_ixc_macro_path"] }	
ixc_message_api = { path = "../message_api", version = "0.0.4" }	
ixc_collections = { path = "../collections", version = "0.0.4" }	
simple_time = { path = "../util/simple_time", version = "0.0.2" }	
ixc_core_macros = { path = "../core_macros", version = "0.0.4" }	
ixc_schema_macros = { path = "../schema_macros", version = "0.0.3", features = ["use_ixc_macro_path"] }	
constcat = "0.5.1"	
array-concat = "0.5.3"	

[dev-dependencies]	
ixc_testing = { path = "../testing" }	
arrayvec = "0.7.6"	
thiserror = "1.0.63"	
num_enum = "0.7.3"	
mockall = "0.13.0"	

[lib]	
doctest = false	

[lints]	
workspace = true	

[features]	
default = []	

[profile.release]	
lto = true	

# [[example]]	
# name = "../../../example"	
# crate-type = ["cdylib"]	
