[package]
name = "ixc_schema"
edition = "2021"
description = "Interchain SDK Schema"
readme = "README.md"
version = "0.0.4"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ixc_message_api = { path = "../message_api", version = "0.0.4" }
ixc_schema_macros = { path = "../schema_macros", version = "0.0.3" }
simple_time = { path = "../util/simple_time", version = "0.0.2" }
allocator-api2 = { workspace = true }
num_enum = "0.7.3"
base64 = { version = "0.22.1", optional = true }
logos = { version = "0.15.0", optional = true }
serde_json = {version = "1.0.134", optional = true}
escape8259 = { version = "0.5.3", optional = true }

[dev-dependencies]
proptest = "1.5.0"
proptest-derive = "0.5.0"
rangemap = "1.5.1"

[features]
default = ["std", "json"]
std = []
json = ["std", "dep:base64", "dep:logos", "dep:escape8259", "dep:serde_json"]
use_ixc_macro_path = []

# TODO remove
[package.metadata.clippy]
unused_variables = "allow"
