[package]
name = "ixc_schema"
edition = "2021"
description = "Interchain SDK Schema"
readme = "README.md"
version = "0.0.4"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ixc_message_api = { path = "../message_api", version = "0.0.4" }
ixc_schema_macros = { path = "../schema_macros", version = "0.0.3" }
simple_time = { path = "../util/simple_time", version = "0.0.2" }
allocator-api2 = { workspace = true }
hashbrown = "0.15.2"
num_enum = "0.7.3"
base64 = { version = "0.22.1", default-features = false }
serde_json = {version = "1.0.134", optional = true}
log = {version = "0.4.22", features = ["release_max_level_off"]}

[dev-dependencies]
proptest = "1.5.0"
proptest-derive = "0.5.0"
rangemap = "1.5.1"
test-log = "0.2.16"

[features]
default = ["std", "json_decode"]
std = []
json_decode = ["std", "dep:serde_json", "base64/alloc"]
use_ixc_macro_path = []

# TODO remove
[package.metadata.clippy]
unused_variables = "allow"
