[package]
name = "ixc_bank"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ixc = { path = "../../module_system/ixc" }
ixc_core = { path = "../../module_system/core" }
mockall = "0.13.0"

[dev-dependencies]
ixc_testing = { path = "../../module_system/testing" }
arrayvec = "0.7.6"
thiserror = "1.0.63"
num_enum = "0.7.3"

[lints]
workspace = true
