[package]
name = "ixc_scheduler"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ixc = { workspace = true }
ixc_core = { workspace = true }
mockall = "0.13.0"

[dev-dependencies]
ixc_testing = { path = "../../module_system/testing" }

[lints]
workspace = true
