[package]
name = "ixc_account_manager"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
ixc_message_api = { path = "../../module_system/message_api" }
ixc_vm_api = { path = "../api" }
ixc_core_macros = { path = "../../module_system/core_macros" }
allocator-api2 = "0.2.18"

[lints]
workspace = true
