[package]
name = "ixc_account_manager"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
ixc_message_api = { path = "../../module_system/message_api" }
ixc_vm_api = { path = "../api" }
ixc_core_macros = { path = "../../module_system/core_macros" }
ixc_core = { path = "../../module_system/core" }
allocator-api2 = { workspace = true }
arrayvec = "0.7.6"

[lints]
workspace = true
